# Data-Norm-2

./: .editorconfig  .env.example  .env.observability.example  .env.production.template  .gitignore  .pre-commit-config.yaml  25M_ARR_GROWTH_STRATEGY.md  ADMIN_CREDENTIALS.md  ADMIN_PORTAL_IMPLEMENTATION.md  ADMIN_PORTAL_QUICKSTART.md  AI_AUDIT_CAPABILITIES.md  AI_ENHANCEMENTS_DEPLOYMENT_STATUS.md  AI_ENHANCEMENTS_README.md  AI_ENHANCEMENTS_SUMMARY.md  API_INTEGRATIONS_ROADMAP.md  ARCHITECTURE.md  AUDIT_REPORT.md  AZURE_CREDENTIALS_SETUP.md  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_CHANGES_REQUIRED.md  AZURE_DEPLOYMENT_CHECK.md  AZURE_DEPLOYMENT_CHECKLIST.md  AZURE_FIRST_TIME_SETUP.md  AZURE_QUICKSTART.md  CHANGELOG.md  CI_CD_FIXES_COMPLETE.md  CODEBASE_AUDIT_AND_COMPETITIVE_ANALYSIS.md  CODEBASE_AUDIT_REPORT.md  CODEBASE_METRICS_REPORT.md  CODEBASE_STATISTICS_AUDIT.md  CODEOWNERS  COMPETITIVE_ANALYSIS_AND_GAPS.md  COMPLETE_PLATFORM_AUDIT.md  COMPREHENSIVE_AUDIT_REPORT_2025.md  COMPREHENSIVE_AUDIT_SUMMARY.md  CONTRIBUTING.md  CPA_PORTAL_DEPLOYMENT.md  CPA_PORTAL_FEATURE_MAP.md  CPA_PORTAL_FIXES_COMPLETE.md  CPA_PORTAL_UI_IMPLEMENTATION_SUMMARY.md  (+106 more)
.azure/: azureProfile.json  commandIndex.json  versionCheck.json
.claude/: settings.local.json
.github/workflows/: ci.yml  ci.yml.disabled  deploy-ai-orchestrator.yml  deploy-azure.yml  deploy-client-portal.yml  deploy-gateway.yml  deploy-identity.yml  deploy-ml.yml  deploy-rd-study.yml  deploy-with-smoke-tests.yml  deploy-with-smoke-tests.yml.disabled  openapi.yml  smoke-tests.yml
admin-portal/: .dockerignore  .env.example  ADMIN_PORTAL_DEMO.md  Dockerfile  README.md  STRIPE_INTEGRATION.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin-portal/src/: App.tsx  authConfig.ts  config.ts  index.css  vite-env.d.ts
azure-ai-ml/: .env.example  Dockerfile  GPU_QUOTA_REQUEST_GUIDE.md  README.md  SETUP_GUIDE.md  config.py  main.py  requirements.txt
azure-ai-ml/data_acquisition/: __init__.py
azure-ai-ml/data_normalization/: __init__.py  financial_statement_normalizer.py
azure-ai-ml/training_pipelines/: __init__.py
client-portal/: .env.example  CLIENT_PORTAL_DEMO.md  Dockerfile  UI_SHOWCASE.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
client-portal-desktop/: .gitignore  DEPLOYMENT.md  README.md  SECURITY.md  package.json  vite.config.ts
client-portal-desktop/electron/: main.js  preload.js
client-portal-desktop/src/: electron.d.ts
client-portal/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
database/: README.md
database/migrations/: 001_comprehensive_ai_training_schema.sql  002_ingestion_and_mapping_tables.sql  003_filing_text_content.sql  004_confirmation_system.sql  005_workpaper_templates.sql  006_gaap_disclosure_checklist.sql  007_opinion_templates.sql  008_multi_tenant_rbac.sql  009_regulation_ab_cmbs.sql  010_ai_enhancements.sql  011_advanced_report_generation.sql  012_rd_client_portal.sql
database/models/: ai_training_models.py
database/scripts/: seed_reference_data.py
db/migrations/: 0001_init.sql  0002_reg_ab_audit.sql  0003_tax_preparation.sql
docs/: AI-AGENT-E2E-TEST-REPORT.md
docs/tax/: ADR-0001-context.md  IMPLEMENTATION_SUMMARY.md  README.md
frontend/: .env.example  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  README.md  TESTING.md  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
infra/aws/: main.tf  variables.tf
infra/azure/: README.md  backend.tf  deploy.sh  main.tf  terraform.tfvars.example  tfplan  variables.tf
infra/k8s/: identity-email-patch.yaml  update-configmap.yaml
lib/common_core/: __init__.py  dependencies.py  exceptions.py  logging_config.py  middleware.py  schemas.py  setup.py
lib/event_bus/: __init__.py  event_bus.py  schemas.py  setup.py
lib/service_client/: __init__.py  client.py  exceptions.py  setup.py
marketing/: syntheia-commercial-prompt.md
marketing-site/: .env.example  DEPLOYMENT.md  Dockerfile  GODADDY_DEPLOYMENT.md  README.md  WEBSITE_OVERVIEW.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
marketing-site/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
marketing-site/components/: Footer.tsx  Navigation.tsx
marketing-site/public/: site.webmanifest
observability/alertmanager/: alertmanager.yml
observability/loki/: loki-config.yml
observability/prometheus/: alerts.yml  prometheus.yml
observability/promtail/: promtail-config.yml
openapi/: atlas.yaml  metadata.yaml
output/HarborTech_Audit_2024/: 01_Cover_Letter.txt  02_Independent_Auditors_Report.txt  03_Financial_Statements.txt  04_Notes_to_Financial_Statements.txt  05_Management_Representation_Letter.txt
rdclient-portal/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
rdclient-portal/src/: App.tsx  index.css  vite-env.d.ts
scripts/: add-soc-columns.ps1  ai-agent-test-results.json  apply-and-restart.ps1  apply-k8s.ps1  azure-shutdown.ps1  build-acr.ps1  build-client-portal.ps1  build-no-wait.ps1  build-rd-study.ps1  check-api-endpoints.ps1  check-db-config.ps1  check-engagements.ps1  check-final-status.ps1  check-job-failure.ps1  check-k8s.ps1  check-logs.ps1  check-ml-service.ps1  check-new-pods.ps1  check-nginx.ps1  check-pods.ps1  check-pvc.ps1  check-rd-image.ps1  check-rd-logs.ps1  check-rd-status.ps1  check-rd-svc.ps1  check-rls-policy.ps1  check-soc-jwt.ps1  check-soc-logs.ps1  check-study.ps1  check-team.ps1  check-train-logs.ps1  check-training-status.ps1  check-user-roles.ps1  check-users.ps1  check_db.py  check_users.py  cleanup-old.ps1  convert-logo.ps1  create-toroni-firm.ps1  create_admin_user.py  (+104 more)
scripts/openapi/: combine_specs.py  generate_all.sh  generate_service_specs.py  validate_spec.py
services/accounting-integrations/: README.md  SETUP_GUIDE.md  requirements.txt
services/advanced-report-generation/: .dockerignore  (+6 more)
(+796 files in other folders)
